--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -6,6 +6,7 @@
 body{
     font-family: 'Roboto', sans-serif;
     background-color: #454545;
+    color: #fff;
 }
 .logo{
     text-align: center;
@@ -25,7 +26,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
     flex-wrap: wrap;
 }
 .contenedor__item{
@@ -36,10 +37,21 @@ body{
     width: 300px;
     margin: 10px;
     height: 300px;
+    transition: 0.3s ease transform;
 }
 .contenedor__item:hover{
     background-color: #f2f2f2;
-    width: 320px;
-    height: 320px;
+    transform: scale(1.1);
     box-shadow: 0 0 10px rgba(0,0,0,0.7);
+    color: #000;
+}
+aside{
+    position: fixed;
+    top: 10px;
+    color: #ff0;
+}
+footer{
+    position: relative;
+    bottom: 10px;
+    color: #fff;
 }
