--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -16,8 +16,10 @@ button{
     border-radius: 10px;
     box-shadow: #000000 0 0 10px;
     background: #32b1329a;
+    color: #fff;
 }
 .logo{
+    margin: 2%;
     text-align: center;
     border-radius: 50%;
     width: 10%;
@@ -25,6 +27,9 @@ button{
     border: 1px solid #fff;
     overflow: hidden;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+.texto{
+    width: 50%;
 }
 .imagen{
     width: 100%;
