--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -73,6 +73,9 @@ button{
     box-shadow: 0 0 10px rgba(0,0,0,0.7);
     color: #000;
 }
+.texto_modal{
+    display: none;
+}
 aside{
     position: fixed;
     top: 10px;
@@ -92,6 +95,60 @@ footer{
     position: relative;
     bottom: 10px;
     color: #fff;
+}
+.desc {
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-top: 10px;
+}
+
+/* Estilos del modal */
+.modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #f0f;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+    z-index: 20;
+    width: 300px;
+    height: auto;
+    display: none;
+}
+
+.modal.open {
+    display: block;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    /*height: 100%;*/
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 10;
+    display: none;
+}
+
+.overlay.open {
+    display: block;
+}
+
+.close {
+    background-color: #e74c3c;
+    color: #fff;
+    border: none;
+    padding: 5px 5px;
+    border-radius: 5px;
+    cursor: pointer;
+    float: right;
 }
 @media(max-width: 400px){
     aside{
