--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -34,7 +34,9 @@ button{
 .imagen{
     width: 100%;
     height: 100%;
+    border-radius: 10px;
     /*object-fit: cover;*/
+    transition: 0.3s ease transform;
 }
 .contenedor{
     display: flex;
@@ -48,15 +50,15 @@ button{
     padding: 10px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
-    width: 200px;
-    margin: 10px;
-    height: 200px;
-    transition: 0.3s ease transform;
+    width: 220px;
+    margin: 1%;
+    height: auto;
+    /*transition: 0.3s ease transform;*/
     cursor: pointer;
     z-index: 1;
     border: 5px solid #FFAA00;
 }
-.contenedor__item:before{
+/*.contenedor__item:before{
     content: '';
     position: absolute;
     top: -2px;
@@ -64,14 +66,13 @@ button{
     right: -2px;
     bottom: -2px;
     border-radius: 10px;
-    background: linear-gradient(#a1a098, #161615);
+    background: linear-gradient(#ffaa00, #161615);
     z-index: -1;
-}
-.contenedor__item:hover{
-    background-color: #f2f2f2;
-    transform: scale(1.1);
+}*/
+.contenedor__item .imagen:hover{
+    transform: scale(0.9) rotate(3deg);
     box-shadow: 0 0 10px rgba(0,0,0,0.7);
-    color: #000;
+    color: #ff0;
 }
 .texto_modal{
     display: none;
@@ -84,6 +85,7 @@ aside{
     background: linear-gradient(#FFD700, #FFAA00);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    z-index: 10;
 }
 i{
     font-size: 30px;
@@ -99,7 +101,7 @@ footer{
 .desc {
     color: #fff;
     border: none;
-    padding: 10px 20px;
+    padding: 5px 10px;
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
