--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -5,8 +5,12 @@
 }
 body{
     font-family: 'Roboto', sans-serif;
-    background-color: #454545;
+    /*background-color: #454545;*/
     color: #fff;
+    background: url('../recursos/imagen/fondo2.webp') no-repeat center center fixed;
+    backdrop-filter: grayscale(100%) brightness(30%);
+    background-size: cover;
+    height: 100%;
 }
 button{
     height: 35px;
@@ -17,6 +21,9 @@ button{
     box-shadow: #000000 0 0 10px;
     background: #32b1329a;
     color: #fff;
+}
+p{
+    font-size: 12px;
 }
 .logo{
     margin: 2%;
@@ -39,10 +46,12 @@ button{
     transition: 0.3s ease transform;
 }
 .contenedor{
+    border:#FFAA00 2px solid;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
+    width: 99%;
     flex-wrap: wrap;
 }
 .contenedor__item{
@@ -57,6 +66,9 @@ button{
     cursor: pointer;
     z-index: 1;
     border: 5px solid #FFAA00;
+}
+.contenedor__item > div{
+    display: flex;
 }
 /*.contenedor__item:before{
     content: '';
@@ -97,6 +109,7 @@ footer{
     position: relative;
     bottom: 10px;
     color: #fff;
+    height: 100px;
 }
 .desc {
     color: #fff;
