--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -59,16 +59,21 @@ p{
     padding: 10px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
-    width: 250px;
+    width: 100%;
     margin: 1%;
     height: auto;
     /*transition: 0.3s ease transform;*/
     cursor: pointer;
     z-index: 1;
     border: 5px solid #FFAA00;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 .contenedor__item > div{
     display: flex;
+    width: 200px;
+    height: 200px;
 }
 /*.contenedor__item:before{
     content: '';
