--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -70,22 +70,16 @@ p{
     align-items: center;
     justify-content: space-between;
 }
-.contenedor__item > div{
+.contenedor__item div{
     display: flex;
     width: 200px;
     height: 200px;
 }
-/*.contenedor__item:before{
-    content: '';
-    position: absolute;
-    top: -2px;
-    left: -2px;
-    right: -2px;
-    bottom: -2px;
-    border-radius: 10px;
-    background: linear-gradient(#ffaa00, #161615);
-    z-index: -1;
-}*/
+.descripcion{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .contenedor__item .imagen:hover{
     transform: scale(0.9) rotate(3deg);
     box-shadow: 0 0 10px rgba(0,0,0,0.7);
@@ -184,5 +178,11 @@ footer{
     }
     .logo{
         width: 30%;
+    }
+}
+@media(max-width: 250px){
+    .contenedor__item div{
+        width: 150px;
+        height: 150px;
     }
 }
