--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -8,8 +8,9 @@ body{
     /*background-color: #454545;*/
     color: #fff;
     /*background: url('../recursos/imagen/fondo2.webp') no-repeat center center fixed;*/
+    /*background: url('../recursos/imagen/perro.avif') center center fixed;*/
     /*backdrop-filter: grayscale(100%) brightness(30%);*/
-    /*background-size: cover;*/
+    background-size: cover;
     background: #000000;
     height: 100%;
 }
@@ -19,8 +20,8 @@ button{
     font-family: 'Austie Bost Kitten Klub', sans-serif;
     font-size: 15px;
     border-radius: 10px;
-    box-shadow: #000000 0 0 10px;
-    background: #32b1329a;
+    box-shadow: #000000 0 5px 10px;
+    background: #356bbb;
     color: #fff;
 }
 p{
@@ -49,7 +50,19 @@ hr{
     height: 100%;
     border-radius: 10px;
     /*object-fit: cover;*/
+    margin: 2%;
     transition: 0.3s ease transform;
+}
+.imagen2{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    /*object-fit: cover;*/
+    margin: 2%;
+    transition: 0.3s ease transform;
+}
+.hint--top{
+    display: flex;
 }
 .contenedor{
     /*border:#FFAA00 2px solid;*/
@@ -78,8 +91,8 @@ hr{
 }
 .contenedor__item div{
     display: flex;
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
 }
 .descripcion{
     display: flex;
@@ -91,8 +104,27 @@ hr{
     box-shadow: 0 0 10px rgba(0,0,0,0.7);
     color: #ff0;
 }
+.contenedor__item .imagen2:hover{
+    transform: scale(0.9) rotate(-3deg);
+    box-shadow: 0 0 10px rgba(0,0,0,0.7);
+    color: #ff0;
+}
 .texto_modal{
     display: none;
+}
+.aside{
+    position: fixed;
+    top: 30%;
+    width: 20%;
+    left: 0;
+    z-index: -11;
+}
+.aside_right{
+    position: fixed;
+    top: 30%;
+    width: 20%;
+    right: 0;
+    z-index: -11;
 }
 aside{
     position: fixed;
@@ -170,6 +202,11 @@ footer{
     border-radius: 5px;
     cursor: pointer;
     float: right;
+}
+@media(max-width: 810px){
+    .imagen2{
+        display: none;
+    }
 }
 @media(max-width: 500px){
     .contenedor__item{
