--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -214,6 +214,12 @@ footer{
     }
 }
 @media(max-width: 400px){
+    .aside{
+        display: none;
+    }
+    .aside_right{
+        top: 40%;
+    }
     aside{
         display: flex;
         flex-direction: column;
