--- a/estilos/vistas.css
+++ b/estilos/vistas.css
@@ -7,6 +7,16 @@
   flex-direction: column;
   align-items: center;
 }
+.calculadora{
+  width: 50%;
+  border: 2px solid #000;
+  border-radius: 5px;
+  margin: 1%;
+  padding: 2%;
+}
+main{
+  margin-top: 100px;
+}
 .container{
   display: flex;
   flex-wrap: wrap;
