--- a/estilos/vistas.css
+++ b/estilos/vistas.css
@@ -9,7 +9,7 @@
 }
 .calculadora{
   width: 50%;
-  border: 2px solid #000;
+  border: 1px solid #8d8d8d;
   border-radius: 5px;
   margin: 1%;
   padding: 2%;
@@ -19,20 +19,45 @@ main{
 }
 .container{
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
   align-items: start;
 }
-.container > div{
-  text-align: center;
+.container > .card{
   margin: 1%;
-  border: 2px solid black;
-  border-radius: 5px;
-  width: 250px;
-  height: auto;
 }
-.container-item > div > img{
-  margin: 1%;
-  width: 150px;
-  height: 150px;
+.card{
+  width: 250px;
+}
+.card > img{
+  height: 300px;
+  cursor: pointer;
+}
+.card img:hover{
+  width: 245px;
+  height: 295px;
+  transition: 0.6s ease;
+}
+/* GALERÍA */
+section{
+    display: flex;
+    width: 80%;
+    height: 400px;
+    margin: 1%;
+}
+section div{
+    width: 0;
+    flex-grow: 0.5;
+    object-fit: cover;
+    opacity: 8;
+    transition: .5s ease;
+}
+img{
+    width: 100%;
+    height: 100%;
+}
+section div:hover{
+    cursor: pointer;
+    width: 350px;
+    opacity: 1;
+    filter: contrast(120%);
 }
