--- a/estilos/vistas.css
+++ b/estilos/vistas.css
@@ -21,6 +21,7 @@ main{
   display: flex;
   justify-content: center;
   align-items: start;
+  flex-wrap: wrap;
 }
 .container > .card{
   margin: 1%;
@@ -60,4 +61,10 @@ section div:hover{
     width: 350px;
     opacity: 1;
     filter: contrast(120%);
+}
+/* RESPONSIVE */
+@media(max-width: 400px){
+  section{
+    width: 100%;
+  }
 }
