--- a/estilos/carousel.css
+++ b/estilos/carousel.css
@@ -132,13 +132,27 @@ main{
 /* CUSTOM CSS
 -------------------------------------------------- */
 .logo{
-  width: 20%;
+  width: 30%;
   border-radius: 50%;
 }
 .navbar-brand > div{
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.disabled{
+  -webkit-user-select: none;
+  user-select: none;
+}
+.brinca{
+    animation: bounce 0.8s ease;
+}
+@keyframes bounce{
+    0% { transform: scale(1); }
+    30% { transform: scale(1.05); }
+    50% { transform: scale(0.9); }
+    70% { transform: scale(1.05); }
+    100% { transform: scale(1); }
 }
 
 /* RESPONSIVE CSS
