--- a/estilos/vistas.css
+++ b/estilos/vistas.css
@@ -24,19 +24,22 @@ main{
   flex-wrap: wrap;
 }
 .container > .card{
-  margin: 1%;
+  margin: 0.3%;
 }
 .card{
   width: 250px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .card > img{
+  width: 100%;
   height: 300px;
   cursor: pointer;
 }
 .card img:hover{
   width: 245px;
-  height: 295px;
-  transition: 0.6s ease;
+  transition: 0.3s ease;
 }
 /* GALERÍA */
 section{
