--- a/estilos/carousel.css
+++ b/estilos/carousel.css
@@ -150,11 +150,14 @@ main{
 @keyframes bounce{
     0% { transform: scale(1); }
     30% { transform: scale(1.05); }
-    50% { transform: scale(0.9); }
+    50% { transform: scale(0.95); }
     70% { transform: scale(1.05); }
     100% { transform: scale(1); }
 }
-
+.img-fluid{
+  width: 350px;
+  height: 350px;
+}
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 
